Skill map page 5: no blank cells — 5 declared, 6 escape hatches written, 1 n/a + a blank guard (#426)
* Page 5: no blank cells — 5 declared, 6 escape hatches written, 1 n/a; blank guard

A reader flagged 12 blank cells. Checked against each skill: five were
sections the map did not declare (Typing rust/jvm/go, Memory/UB go, Web
rust); six were a real gap, the GC languages' escape hatches into raw
memory, now stated once in sota-code-security rules/06 §3 with a section
and probe in jvm, python, js/ts, .NET, php and ruby (every mechanism from
vendor docs; ten probes fixture-tested under ugrep and BSD grep); one
(c/c++ Web) does not apply and is drawn as n/a with its reason.

gen-skill-map.py refuses to draw an unexplained blank; watched to fail with
the n/a entry removed.

* Handoff: next session focuses on depth (ROADMAP 59), with the measured table

Breadth is uniform after page 5's blanks were closed; depth is not (569-2,152
rules lines, 40-110 audit items, 4 of 9 languages checked against an
external list). The priorities row names the order (jvm, .NET, then php,
rust, js/ts) and warns that the concept-matrix candidate list is not
evidence (both .NET candidates checked were false).